fixed layout issues with eventCard

--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -33,8 +33,29 @@
     margin-left: 16px;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 600px) {
     .EventCard {
+        display: flex;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    .EventCard {
+        flex-direction: column;
+        border: none;
         flex: 1;
+        margin: 0;
+        box-shadow: none;
+        min-height: auto;
+    }
+    .EventCard-info {
+        max-width: none;
+        margin: 24px 0;
+    }
+    .EventCard-image {
+        height: auto;
+        width: 100%;
+        max-height: none;
     }
 }
